--- a/index.html
+++ b/index.html
@@ -6,35 +6,12 @@
         <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="./resources/ol.css">
-        <link rel="stylesheet" href="resources/fontawesome-all.min.css">
-        <link href="resources/ol-geocoder.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
-        <link rel="stylesheet" href="./resources/qgis2web.css">
-        <style>
-        html, body {
-            background-color: #ffffff;
-        }
-        .ol-control > * {
-            background-color: #f8f8f8!important;
-            color: #444444!important;
-            border-radius: 0px;
-        }
-        .ol-attribution a, .gcd-gl-input::placeholder, .search-layer-input-search::placeholder {
-            color: #444444!important;
-        }
-        .search-layer-input-search {
-            background-color: #f8f8f8!important;
-        }
-        .ol-control > *:focus, .ol-control >*:hover {
-            background-color: rgba(248, 248, 248, 0.7)!important;
-        } 
-        .ol-control {
-            background-color: rgba(255,255,255,.4) !important;
-            padding: 2px !important;
-        } 
-        </style>
-
+        <link rel="stylesheet" href="css/leaflet.css">
+        <link rel="stylesheet" href="css/L.Control.Layers.Tree.css">
+        <link rel="stylesheet" href="css/L.Control.Locate.min.css">
+        <link rel="stylesheet" href="css/qgis2web.css">
+        <link rel="stylesheet" href="css/fontawesome-all.min.css">
+        <link rel="stylesheet" href="css/leaflet-measure.css">
         <style>
         html, body, #map {
             width: 100%;
@@ -43,80 +20,194 @@
             margin: 0;
         }
         </style>
-        <title>Clustering Map</title>
+        <title></title>
     </head>
     <body>
         <div id="map">
-            <div id="popup" class="ol-popup">
-                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
-                <div id="popup-content"></div>
-            </div>
         </div>
-        
-        <!-- Deine bereits eingebundenen Scripts -->
-        <script src="resources/qgis2web_expressions.js"></script>
-        <script src="resources/polyfills.js"></script>
-        <script src="./resources/functions.js"></script>
-        <script src="./resources/ol.js"></script>
-        <script src="./resources/ol-layerswitcher.js"></script>
-        <script src="resources/ol-geocoder.js"></script>
-        <script src="layers/IUENNA_Metadata06_RET_1.js"></script>
-        <script src="layers/IUENNA_Metadata05_TAL_2.js"></script>
-        <script src="layers/IUENNA_Metadata04_STE_3.js"></script>
-        <script src="layers/IUENNA_Metadata03_JAU_4.js"></script>
-        <script src="layers/IUENNA_Metadata02_HB_5.js"></script>
-        <script src="layers/IUENNA_Metadata01_GLO_6.js"></script>
-        <script src="layers/IUENNAVoronoi_7.js"></script>
-        <script src="layers/IUENNABegrenzendeGeometrieadaptiert_8.js"></script>
-        <script src="styles/IUENNA_Metadata06_RET_1_style.js"></script>
-        <script src="styles/IUENNA_Metadata05_TAL_2_style.js"></script>
-        <script src="styles/IUENNA_Metadata04_STE_3_style.js"></script>
-        <script src="styles/IUENNA_Metadata03_JAU_4_style.js"></script>
-        <script src="styles/IUENNA_Metadata02_HB_5_style.js"></script>
-        <script src="styles/IUENNA_Metadata01_GLO_6_style.js"></script>
-        <script src="styles/IUENNAVoronoi_7_style.js"></script>
-        <script src="styles/IUENNABegrenzendeGeometrieadaptiert_8_style.js"></script>
-        <script src="./layers/layers.js" type="text/javascript"></script> 
-        <script src="./resources/Autolinker.min.js"></script>
-        <script src="./resources/qgis2web.js"></script>
-
-        <!-- Cluster-Funktionalität hinzufügen -->
+        <script src="js/qgis2web_expressions.js"></script>
+        <script src="js/leaflet.js"></script>
+        <script src="js/L.Control.Layers.Tree.min.js"></script>
+        <script src="js/L.Control.Locate.min.js"></script>
+        <script src="js/leaflet.rotatedMarker.js"></script>
+        <script src="js/leaflet.pattern.js"></script>
+        <script src="js/leaflet-hash.js"></script>
+        <script src="js/Autolinker.min.js"></script>
+        <script src="js/rbush.min.js"></script>
+        <script src="js/labelgun.min.js"></script>
+        <script src="js/labels.js"></script>
+        <script src="js/leaflet-measure.js"></script>
+        <script src="data/R00_WGS84_1.js"></script>
         <script>
-        // Definiere die Cluster-Quelle
-        var distance = 40; // Abstand, in dem Marker geclustert werden
-        var clusterSource = new ol.source.Cluster({
-            distance: distance,
-            source: IUENNA_Metadata06_RET_1 // Beispielhaft für einen Layer, wähle den Layer, den du clustern willst
-        });
+        var highlightLayer;
+        function highlightFeature(e) {
+            highlightLayer = e.target;
 
-        // Definiere die Cluster-Ebene
-        var clusterLayer = new ol.layer.Vector({
-            source: clusterSource,
-            style: function (feature) {
-                var size = feature.get('features').length;
-                var style = new ol.style.Style({
-                    image: new ol.style.Circle({
-                        radius: 10,
-                        stroke: new ol.style.Stroke({
-                            color: '#fff'
-                        }),
-                        fill: new ol.style.Fill({
-                            color: '#3399CC'
-                        })
-                    }),
-                    text: new ol.style.Text({
-                        text: size.toString(),
-                        fill: new ol.style.Fill({
-                            color: '#fff'
-                        })
-                    })
-                });
-                return style;
+            if (e.target.feature.geometry.type === 'LineString' || e.target.feature.geometry.type === 'MultiLineString') {
+              highlightLayer.setStyle({
+                color: '#ffff00',
+              });
+            } else {
+              highlightLayer.setStyle({
+                fillColor: '#ffff00',
+                fillOpacity: 1
+              });
             }
+        }
+        var map = L.map('map', {
+            zoomControl:false, maxZoom:28, minZoom:1
+        }).fitBounds([[33.24115037085325,1.3492822673087879],[52.91717655501578,44.55018773269123]]);
+        var hash = new L.Hash(map);
+        map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
+        var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
+        // remove popup's row if "visible-with-data"
+        function removeEmptyRowsFromPopupContent(content, feature) {
+         var tempDiv = document.createElement('div');
+         tempDiv.innerHTML = content;
+         var rows = tempDiv.querySelectorAll('tr');
+         for (var i = 0; i < rows.length; i++) {
+             var td = rows[i].querySelector('td.visible-with-data');
+             var key = td ? td.id : '';
+             if (td && td.classList.contains('visible-with-data') && feature.properties[key] == null) {
+                 rows[i].parentNode.removeChild(rows[i]);
+             }
+         }
+         return tempDiv.innerHTML;
+        }
+        // add class to format popup if it contains media
+		function addClassToPopupIfMedia(content, popup) {
+			var tempDiv = document.createElement('div');
+			tempDiv.innerHTML = content;
+			if (tempDiv.querySelector('td img')) {
+				popup._contentNode.classList.add('media');
+					// Delay to force the redraw
+					setTimeout(function() {
+						popup.update();
+					}, 10);
+			} else {
+				popup._contentNode.classList.remove('media');
+			}
+		}
+        var zoomControl = L.control.zoom({
+            position: 'topleft'
+        }).addTo(map);
+        L.control.locate({locateOptions: {maxZoom: 19}}).addTo(map);
+        var measureControl = new L.Control.Measure({
+            position: 'topleft',
+            primaryLengthUnit: 'meters',
+            secondaryLengthUnit: 'kilometers',
+            primaryAreaUnit: 'sqmeters',
+            secondaryAreaUnit: 'hectares'
         });
+        measureControl.addTo(map);
+        document.getElementsByClassName('leaflet-control-measure-toggle')[0].innerHTML = '';
+        document.getElementsByClassName('leaflet-control-measure-toggle')[0].className += ' fas fa-ruler';
+        var bounds_group = new L.featureGroup([]);
+        function setBounds() {
+        }
+        map.createPane('pane_OSMStandard_0');
+        map.getPane('pane_OSMStandard_0').style.zIndex = 400;
+        var layer_OSMStandard_0 = L.tileLayer('http://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            pane: 'pane_OSMStandard_0',
+            opacity: 1.0,
+            attribution: '<a href="https://www.openstreetmap.org/copyright">© OpenStreetMap contributors, CC-BY-SA</a>',
+            minZoom: 1,
+            maxZoom: 28,
+            minNativeZoom: 0,
+            maxNativeZoom: 19
+        });
+        layer_OSMStandard_0;
+        map.addLayer(layer_OSMStandard_0);
+        function pop_R00_WGS84_1(feature, layer) {
+            layer.on({
+                mouseout: function(e) {
+                    for (var i in e.target._eventParents) {
+                        if (typeof e.target._eventParents[i].resetStyle === 'function') {
+                            e.target._eventParents[i].resetStyle(e.target);
+                        }
+                    }
+                },
+                mouseover: highlightFeature,
+            });
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2"><strong>hasAlternativeTitle</strong><br />' + (feature.properties['hasAlternativeTitle'] !== null ? autolinker.link(feature.properties['hasAlternativeTitle'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">hasCollectedEndDate</th>\
+                        <td>' + (feature.properties['hasCollectedEndDate'] !== null ? autolinker.link(feature.properties['hasCollectedEndDate'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">hasSubject</th>\
+                        <td>' + (feature.properties['hasSubject'] !== null ? autolinker.link(feature.properties['hasSubject'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">hasTitle</th>\
+                        <td>' + (feature.properties['hasTitle'] !== null ? autolinker.link(feature.properties['hasTitle'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">hasSpatialCoverage</th>\
+                        <td>' + (feature.properties['hasSpatialCoverage'] !== null ? autolinker.link(feature.properties['hasSpatialCoverage'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">pid</th>\
+                        <td>' + (feature.properties['pid'] !== null ? autolinker.link(feature.properties['pid'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">hasIdentifier</th>\
+                        <td>' + (feature.properties['hasIdentifier'] !== null ? autolinker.link(feature.properties['hasIdentifier'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['x'] !== null ? autolinker.link(feature.properties['x'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['y'] !== null ? autolinker.link(feature.properties['y'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
+			layer.on('popupopen', function(e) {
+				addClassToPopupIfMedia(content, e.popup);
+			});
+			layer.bindPopup(content, { maxHeight: 400 });
+        }
 
-        // Füge die Cluster-Ebene zur Karte hinzu
-        map.addLayer(clusterLayer);
+        function style_R00_WGS84_1_0() {
+            return {
+                pane: 'pane_R00_WGS84_1',
+                radius: 4.0,
+                opacity: 1,
+                color: 'rgba(35,35,35,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1,
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(213,180,60,1.0)',
+                interactive: true,
+            }
+        }
+        map.createPane('pane_R00_WGS84_1');
+        map.getPane('pane_R00_WGS84_1').style.zIndex = 401;
+        map.getPane('pane_R00_WGS84_1').style['mix-blend-mode'] = 'normal';
+        var layer_R00_WGS84_1 = new L.geoJson(json_R00_WGS84_1, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json_R00_WGS84_1',
+            layerName: 'layer_R00_WGS84_1',
+            pane: 'pane_R00_WGS84_1',
+            onEachFeature: pop_R00_WGS84_1,
+            pointToLayer: function (feature, latlng) {
+                var context = {
+                    feature: feature,
+                    variables: {}
+                };
+                return L.circleMarker(latlng, style_R00_WGS84_1_0(feature));
+            },
+        });
+        bounds_group.addLayer(layer_R00_WGS84_1);
+        map.addLayer(layer_R00_WGS84_1);
+        setBounds();
         </script>
     </body>
 </html>
